add counting the frequency of requests in the context of names

--- a/src/main/resources/templates/people/search.html
+++ b/src/main/resources/templates/people/search.html
@@ -8,7 +8,7 @@
 
 <h1>Get Age by person Name</h1>
 
-<form th:method="GET" th:action="@{/persons/search/age}">
+<form th:method="GET" th:action="@{/people/search/age}">
     <label for="query">Введите имя: </label>
     <input type="text" id="query" name="query">
     <br>
