--- a/src/main/resources/templates/people/max-age.html
+++ b/src/main/resources/templates/people/max-age.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="../../static/style.css">
     <meta charset="UTF-8">
     <title>Max Age</title>
 </head>
 <body>
 
-<h1>Name with Max Age</h1>
+<div class="topnav">
+    <a class="active" th:href="@{/people/search}">Get age by name</a>
+    <a th:href="@{/people/count}">Count name</a>
+    <a th:href="@{/people/name-by-max-age}">Max age</a>
+</div>
 
-<div th:each="name : ${namesWithMaxAge}">
-    <span th:text="${name}"></span>
+<div class="main">
+    <h1 class = "card1">Name with Max Age</h1>
+
+    <div class="card2" th:each="name : ${namesWithMaxAge}">
+        <span th:text="${name}"></span>
+    </div>
+</div>
+
+<div class="bottompan">
+    <p> Copyright 2023</p>
 </div>
 
 </body>
