--- a/src/main/resources/templates/people/search.html
+++ b/src/main/resources/templates/people/search.html
@@ -11,8 +11,8 @@
 
 <div class="topnav">
     <a class="active" th:href="@{/people/search}">Get age by name</a>
-    <a th:href="@{/people/count}">Count name</a>
-    <a th:href="@{/people/name-by-max-age}">Max age</a>
+    <a th:href="@{/people/statistics/count}">Count name</a>
+    <a th:href="@{/people/statistics/name-by-max-age}">Max age</a>
 </div>
 
 <div class="main">
