--- a/src/main/resources/templates/people/search.html
+++ b/src/main/resources/templates/people/search.html
@@ -25,8 +25,9 @@
             <input type="submit" value="Искать">
         </form>
 
-        <div th:if="${age >= 0}">
+        <div>
             <span class="CardAge" th:text="${'Возраст: ' + age}"/>
+            <span class="CardAge" th:text="${'Имя: ' + name}"/>
         </div>
     </div>
     <br>
