--- a/src/main/resources/templates/people/max-age.html
+++ b/src/main/resources/templates/people/max-age.html
@@ -16,8 +16,10 @@
 <div class="main">
     <h1 class = "card1">Name with Max Age</h1>
 
-    <div class="card2" th:each="name : ${namesWithMaxAge}">
-        <span th:text="${'Имя: ' + name}"></span>
+    <div class="card2" th:each="person : ${peopleWithMaxAge}">
+        <span th:text="${'Имя: ' + person.name}"></span>
+        <br>
+        <span th:text="${'Вoзраст: ' + person.age}"></span>
     </div>
 </div>
 
