--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,8 @@
+html{
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+}
 body {
     background: -webkit-linear-gradient(90deg, #EDDEBB, #998662);
     background-image: linear-gradient(0deg, rgba(103, 58, 42, 0.6671043417366946) 0%, rgba(208, 190, 107, 0.40379901960784315) 100%), url("img/more-leaves.png");
@@ -5,6 +10,8 @@ body {
     background-repeat: repeat;
     margin: 0;
     background-attachment: fixed;
+    overflow: hidden;
+    bottom: 50%;
 }
 
 input[type=submit] {
@@ -27,6 +34,10 @@ h1 {
 
 a {
     color: blanchedalmond;
+    /*overflow: hidden;*/
+    /*float: left;*/
+    /*padding: 14px 16px;*/
+    /*text-align: center;*/
 }
 
 #p1 {
@@ -63,6 +74,7 @@ a {
     padding: 10px;
     text-align: center;
     text-shadow: 0 0 5px #191616;
+    bottom: 50%;
 }
 
 .card3 {
@@ -137,7 +149,7 @@ button:hover {
     background-color: #f2e6d9;
     text-align: center;
     font-size: 10px;
-    width:100%;
+    width: 100%;
     bottom: 0;
     position: fixed;
     left: 0;
@@ -146,6 +158,7 @@ button:hover {
 .main {
     padding-bottom: 30%;
     padding-top: 20%;
+    bottom: 100%;
 }
 
 input[type=text], select {
