--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,8 @@
+html {
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+}
+
 body {
     background: -webkit-linear-gradient(90deg, #EDDEBB, #998662);
     background-image: linear-gradient(0deg, rgba(103, 58, 42,
@@ -38,7 +43,6 @@ a {
 
 #p1 {
     text-align: justify;
-    align: center;
     position: absolute;
     top: 10px;
     left: 20px;
@@ -198,7 +202,7 @@ input[type=text], select {
 }
 
 .pageRef {
-    position: absolute;
+    position: fixed;
     top: 93%;
     left: 45%;
     font-size: 20px;
