--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -167,6 +167,7 @@ button:hover {
     bottom: 0;
     position: fixed;
     left: 0;
+    z-index: 1;
 }
 
 .main {
@@ -203,8 +204,10 @@ input[type=text], select {
 
 .pageRef {
     position: fixed;
-    top: 93%;
+    bottom: 4%;
+    z-index: 2;
     left: 45%;
+    text-align: center;
     font-size: 20px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
